# smart-tasks

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
common/: config.py  database.py  exeptions.py  response_schema.py
src/authentication/: Dockerfile
src/authentication/app/: main.py  models.py  routes.py  utils.py
src/authentication/app/schemas/: common_schema.py  token_schema.py  user_schema.py
